tests/fixtures/positive/style/CollapsibleIfStatements.kt
package style

fun example(a: Boolean, b: Boolean) {
    if (a) {
        if (b) {
            doSomething()
        }
    }
}

fun doSomething() {}
